* Many features, see readme.txt
svn path=/trunk/; revision=1546